--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "For scout race",
   "main": "src/index.js",
   "scripts": {
-    "start": "wp"
+    "start": "wp --watch",
+    "build": "wp --github"
   },
   "author": "Jesper Balle",
   "license": "GPL-3.0",
@@ -13,12 +14,15 @@
     "@tensorflow/tfjs": "^2.0.0",
     "base64-inline-loader": "^1.1.1",
     "copy-webpack-plugin": "^6.0.2",
+    "css-loader": "^3.5.3",
     "d3": "^5.16.0",
     "exports-loader": "^0.7.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "marvinj": "^1.0.0",
     "pixfinder": "^0.2.6",
+    "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
     "webpack": "^4.23.1",
     "webpack-nano": "^0.6.1",
     "webpack-plugin-serve": "^0.4.0"
