--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ramasjang-scanner",
   "version": "1.0.0",
-  "description": "For scout race",
+  "description": "Elektron mikrosop. For scout race",
   "main": "src/index.js",
   "scripts": {
     "start": "wp --watch",
@@ -9,6 +9,11 @@
   },
   "author": "Jesper Balle",
   "license": "GPL-3.0",
+  "homepage": "https://jballe.github.io/elektron-mikroskop/",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:jballe/elektron-mikroskop.git"
+  },
   "devDependencies": {
     "@tensorflow-models/coco-ssd": "^2.0.3",
     "@tensorflow/tfjs": "^2.0.0",
@@ -29,6 +34,7 @@
   },
   "dependencies": {
     "@tensorflow/tfjs-automl": "^1.0.0",
+    "favicons-webpack-plugin": "^3.0.1",
     "json-loader": "^0.5.7"
   }
 }
